[package]
name = "tlparse"
version = "0.2.0"
edition = "2021"
authors = ["Edward Z. Yang <ezyang@mit.edu>"]
description = "Parse TORCH_LOG logs produced by PyTorch torch.compile"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
fxhash = "0.2.1"
indexmap = "2.2.3"
indicatif = "0.17.8"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tempfile = "3.10.0"
tinytemplate = "1.2.1"
