[package]
name = "tlparse"
version = "0.3.7"
edition = "2021"
authors = ["Edward Z. Yang <ezyang@mit.edu>"]
description = "Parse TORCH_LOG logs produced by PyTorch torch.compile"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base16ct = "0.2.0"
clap = { version = "4.5.0", features = ["derive"] }
fxhash = "0.2.1"
html-escape = "0.2.13"
indexmap = "2.2.3"
indicatif = "0.17.8"
md-5 = "0.10.6"
once_cell = "1.19.0"
opener = "0.6.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tinytemplate = "1.2.1"
