[package]
name = "tlparse"
version = "0.3.26"
edition = "2021"
authors = ["Edward Z. Yang <ezyang@mit.edu>"]
description = "Parse TORCH_LOG logs produced by PyTorch torch.compile"
license = "BSD-3-Clause"

[lib]
name = "tlparse"

[[bin]]
name = "tlparse"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
syntect = "5.0"
base16ct = "0.2.0"
chrono = "0.4"
clap = { version = "4.5.2", features = ["derive"] }
fxhash = "0.2.1"
html-escape = "0.2.5"
indexmap = "2.1.0"
indicatif = "0.17.6"
md-5 = "0.10"
once_cell = "1.12"
opener = "0.6.1"
regex = "1.9.2"
serde = { version = "1.0.185", features = ["serde_derive"] }
serde_json = "1.0.100"
tinytemplate = "1.1.0"
